test/tests/operators/match/error_binding_after_select.txt
error: match binding `$v` is used after its matched field is mutated
 --> tests/operators/match/error_binding_after_select.tql:9:9
  |
9 |     z = $v
  |         ^^ 
  |
  = hint: move the mutation after all uses of the binding
